--- a/HostelMS/Category.resx
+++ b/HostelMS/Category.resx
@@ -118,54 +118,52 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBox7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAADLSURBVGhD7ZgxDsIwEAT9DeCfQN4HPIoK9ly4YRJKe6Ud
-        aZqJTrokcuMWQgghBOYlP4v7lIdcJA2u6FnuskkaWtG7/KH+RL3EW9LQitau9TLjzziciX/2M0MPHMXo
-        KEZHMTqK0VGMjmIkZ0G7kBjJWdAuJEZHMTqK0VGMjmJ0FKOjGMlZ0C4kRnIWtAuJ0VGMjmJ0FKOjGB3F
-        6Gi/SqEHTj5kpy65btLtgu4q8eq0bu5oaEXrw+9ykjS0orXrIQ5nZpyJEEIIIQxa+wJYAoleOop/kAAA
-        AABJRU5ErkJggg==
-</value>
-  </data>
   <data name="pictureBox6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAJrSURBVHhe7dq5ilRBFMbxVkzUSNHMwA33JRDFxFgfw3kC
-        UUxEETF2SfQlzFxeRHANzBTcknFBDVz+n1JYFKdbpm/dPiV1PviBQnPuuYeZ6qo7dxKJRCKRSCQSqZv1
-        2IcjlajWOjSf43iAr/hZmWrexzE0mcv4Aav5mnSNS2gq52E1O6azaCLb8A1Wk2PSNXfAPTdhNbgI1+Ge
-        p7CaW4THcM9nWM3Je7wYSDWs2qJru8dqLNH6MDTbYdVO3GM1lWzB0KiGVTtxj9VUEgPA0KzBBqzGblxF
-        vu64J7/hUo0BWNmD9O3jnvKmc2MNQNmEh3/+6RvrxpNaAziFJWz8/b+/0RDcY914UmMA2u2leq+wF00l
-        v+HS0AGsQrnReg09H2gmeXOlGj8Bz1HWfYP9aCJlc7kaAzgBa7utIRyAe8rGcrUWQQ3hI8r6b3EIrimb
-        yk0bwC7cwJ0VeAbrGu9wGG6xmkqsAehw8wHW5+elIdQ4eM0Vq6HEGsAVWJ8d6jZcYjWTLHIAt+ASq5nE
-        GoB+VJdhfX5e/9WvgLIT2uGVC90ssxZB128Cq6lk2gBWmllfgwfhmrKpXI0BdL8RsrbCOg90sRXWYegT
-        8prdHYauIdV7ia6OwykncRp6Npiniwci07IZ3TwSK9PVQ1E9FtezQC2IOkVqK50vjO7Jb7hUYwCqYdVO
-        3GM1lXQ/AJ39h6b5P45a29Rk7D+Pay1wzxNYzS3CI7in+1dktmKM9wL/RS9J1VhjquQcrCbHdAZN5SK+
-        w2q2Jl3jAprMUdzDGL8SX3AXene4+ayFjq3lS8/zUi3VjEQikUgkEonUyWTyC1i4Uuk4JUcQAAAAAElF
-        TkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EAAACxABrSO9dQAAAmtJREFUeF7t2rmKVEEUxvFWTNRI0czADfclEMXEWB/DeQJRTEQRMXZJ9CXMXF5E
+        cA3MFNyScUENXP6fUlgUp1umb90+JXU++IFCc+65h5nqqjt3EolEIpFIJBKpm/XYhyOVqNY6NJ/jeICv
+        +FmZat7HMTSZy/gBq/madI1LaCrnYTU7prNoItvwDVaTY9I1d8A9N2E1uAjX4Z6nsJpbhMdwz2dYzcl7
+        vBhINazaomu7x2os0fowNNth1U7cYzWVbMHQqIZVO3GP1VQSA8DQrMEGrMZuXEW+7rgnv+FSjQFY2YP0
+        7eOe8qZzYw1A2YSHf/7pG+vGk1oDOIUlbPz9v7/RENxj3XhSYwDa7aV6r7AXTSW/4dLQAaxCudF6DT0f
+        aCZ5c6UaPwHPUdZ9g/1oImVzuRoDOAFru60hHIB7ysZytRZBDeEjyvpvcQiuKZvKTRvALtzAnRV4Busa
+        73AYbrGaSqwB6HDzAdbn56Uh1Dh4zRWrocQawBVYnx3qNlxiNZMscgC34BKrmcQagH5Ul2F9fl7/1a+A
+        shPa4ZUL3SyzFkHXbwKrqWTaAFaaWV+DB+GasqlcjQF0vxGytsI6D3SxFdZh6BPymt0dhq4h1XuJro7D
+        KSdxGno2mKeLByLTshndPBIr09VDUT0W17NALYg6RWornS+M7slvuFRjAKph1U7cYzWVdD8Anf2Hpvk/
+        jlrb1GTsP49rLXDPE1jNLcIjuKf7V2S2Yoz3Av9FL0nVWGOq5BysJsd0Bk3lIr7DarYmXeMCmsxR3MMY
+        vxJfcBd6d7j5rIWOreVLz/NSLdWMRCKRSCQSidTJZPILWLhS6TglRxAAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EAAACxABrSO9dQAAAMtJREFUaEPtmDEOwjAQBP0N4J9A3gc8igr2XLhhEkp7pR1pmolOuiRy4xZCCCEE
+        5iU/i/uUh1wkDa7oWe6ySRpa0bv8of5EvcRb0tCK1q71MuPPOJyJf/YzQw8cxegoRkcxOorRUYyOYiRn
+        QbuQGMlZ0C4kRkcxOorRUYyOYnQUo6MYyVnQLiRGcha0C4nRUYyOYnQUo6MYHcXoaL9KoQdOPmSnLrlu
+        0u2C7irx6rRu7mhoRevD73KSNLSiteshDmdmnIkQQgghDFr7AlgCiV46in+QAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="pictureBox5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAKISURBVGhD7drNi00BGMfx8ZrkJSVJSVmwJLFQLMhW2dhY
-        WFjYWtpaWNhaytJGFmJhoyyQhaH8ARQKJQuRt7z/Ht3fdB3fe597n7l37hnNtz41c595zjlTM3Nnzp2p
-        hQZruzzsiLfnZYflrfzqeC9HZd60RM7ID/EnYT/lvCyTVrdebkrzE2i6LRulle2Sp0IXTl7IXmlVx+WT
-        0AX380VOycRbIReFLnIYl2SlTKTNcl/owioeyVaZ0w7Ia6ELmo13ckTG3iI5LfSjdVTiR/Q5WSxjaY1c
-        FTr5ONyQdTLSdsgToROO03PZLSPpmHwQOtFc+CwnpNxSia9VOvgkXJDlMlSb5J7QASfpgWyRgdovr4QO
-        1AZv5JD07aR8FTpAm3yXeBqIp4O/WiWXhZba7JqslZmmJQbxzNr84Lbytca1zxTf2PG7zjZpLrSV/4y+
-        IxgtkXFF5yJptETGFZ2LpNEScTSrcDQjabREHM0qHM1IGi0RR7MKRzOSRkvE0azC0Yyk0RJxNKtwNCNp
-        tEQczSoczUgaLRFHswpHM5JGS8TRrMLRjKTREnE0q3A0I2m0RBzNKhzNSBotEUezCkczkkZLxNGswtGM
-        pNEScTSrcDQjabREHM0qHM1IGi0RR7MKRzOSRkvE0azC0Yyk0RJxNKtwNCNptEQczSoczUgaLRFHM4v7
-        tnGvLF6a+9h5rBdHM5JGS8TRLDyTPeJ2ymOhjw2OZiSNloij2XWh1zZWyxWhHUczkkZLxHU/9k3inwX+
-        uZXZVczildzmrVnX/Vg/abREnN+P1xQPxgMDtk9eSq/jZdLuCi02uXj7lmz4895wxU7sNo+X6Xl3cTad
-        lfj/k2qxG8dY6D9qauo3dpSMA7xS9w4AAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EAAACxABrSO9dQAAAohJREFUaEPt2s2LTQEYx/HxmuQlJUlJWbAksVAsyFbZ2FhYWNha2lpY2FrK0kYW
+        YmGjLJCFofwBFAolC5G3vP8e3d90Hd97n3ufuXfuGc23PjVzn3nOOVMzc2fOnamFBmu7POyIt+dlh+Wt
+        /Op4L0dl3rREzsgP8SdhP+W8LJNWt15uSvMTaLotG6WV7ZKnQhdOXsheaVXH5ZPQBffzRU7JxFshF4Uu
+        chiXZKVMpM1yX+jCKh7JVpnTDshroQuajXdyRMbeIjkt9KN1VOJH9DlZLGNpjVwVOvk43JB1MtJ2yBOh
+        E47Tc9ktI+mYfBA60Vz4LCek3FKJr1U6+CRckOUyVJvkntABJ+mBbJGB2i+vhA7UBm/kkPTtpHwVOkCb
+        fJd4Going79aJZeFltrsmqyVmaYlBvHM2vzgtvK1xrXPFN/Y8bvONmkutJX/jL4jGC2RcUXnImm0RMYV
+        nYuk0RJxNKtwNCNptEQczSoczUgaLRFHswpHM5JGS8TRrMLRjKTREnE0q3A0I2m0RBzNKhzNSBotEUez
+        CkczkkZLxNGswtGMpNEScTSrcDQjabREHM0qHM1IGi0RR7MKRzOSRkvE0azC0Yyk0RJxNKtwNCNptEQc
+        zSoczUgaLRFHswpHM5JGS8TRrMLRjKTREnE0q3A0I2m0RBzNKhzNSBotEUczi/u2ca8sXpr72HmsF0cz
+        kkZLxNEsPJM94nbKY6GPDY5mJI2WiKPZdaHXNlbLFaEdRzOSRkvEdT/2TeKfBf65ldlVzOKV3OatWdf9
+        WD9ptESc34/XFA/GAwO2T15Kr+Nl0u4KLTa5ePuWbPjz3nDFTuw2j5fpeXdxNp2V+P+TarEbx1joP2pq
+        6jd2lIwDvFL3DgAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAAkdJREFUeF7tmMtKHEEUhifZmIfKMihZhpCsQ0LWItlLlonmsszlIXyrqA8gKprb
+        DwAACw8BkvkDpQAAAkdJREFUeF7tmMtKHEEUhifZmIfKMihZhpCsQ0LWItlLlonmsszlIXyrqA8gKprb
         X2jB8FGcrjNd3V3dUx98IMPxn/MfZZiZVaPRaEzIe/nh7sftI5T/d+/WHWG9/NYdIVU+uvgjWOWjiz1C
         Tvno4o7gKR9dzBE2KR+d/RE85U/kBR4LhoxZ4in/Uz6Uj2XqCLP7T/CWfyAjT+Sl5NxsjuAp/0Oul4/s
         yivJ+eqP4Cn/XabKR/bkteTvVXsET/lv0iofeSpncQRP+a8yp3zkmbyRzKnmCN7ym/Bc3krmTX4ET/kv
@@ -180,82 +178,81 @@
   </data>
   <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAALwSURBVGhD7ZU7zw9BFIf/7hGNKCRCJEhQiLjUNBLxFTSi
-        IFFLUGgUNAri1mhIFHgLlYLWpfEBNCJKoRQiQfB7/vtOcsyc2d15kzVb7JM8yeyZc+ayt5n14Lxc3TRd
-        TsrNTdPlsDzUNF02yRNN02WVPNs0l85G+U2eml+lrJDv5LX5lc9z+axpulyX7+XK+VXKafldsuFijsur
-        8rX8Iz/K2/KcXC+PyivyqaSfzd6VF+U2eUBekg8k/UibGH3kkEsNtfQzFmMyNnMwF3MyN/2shTWxtt7s
-        kNzpsAj8Jc9I2CBfSduPN+RyuUY+XIxZn8i1cplkU3H/G8lbALyyP6Tt/yB3yyL2SDvIZWlZJ3nkoZ9F
-        WtjQWxn6aROzUBP6GYsxLcwZ+pE1FXNMUswCfsr70rJV0s/7/VVyNy0s+ov8tCjteCPUUMsYjMWYFuZk
-        7nBDWFMxPFr+JrwGe+VNaTkiL0j+aFvkPWk/2O2SD5n3HWkTC5BLDbWMwViMaWFO5mYNrIU1FXNQLsjP
-        krtRU9bwWO6XRbBzHqk3aE35+NvOnH/gSbCJ3/KW3Cnjd/t/wty7JL9i1sRm9slOeJ3YPZsYG3cka3s0
-        v+ogfBM8iUA4GD1fypih8jlDiPEX7ITHR7J9nezAnjFejjXGy7EGWBPXrLGTuBi8GNSI53ITSoprxHO5
-        CW3FOWO8HGuMl2O1eDEXL5EPLsRjX8iYIfNDvJPeiZWYNgJjOUcgxDvxEkMsZ4yXY43xcqwWL+ZSUlwj
-        nstNKCmuEc/lJrQV54zxcqwxXo7V4sVcvMQhzwUoyQ/xTnonVmLaCEznSMYYL8dq8WIuJcU14rnchJLi
-        GvFcbkJbcc4YL8ca4+VYLV7MxUsc8lyAkvwQ76R3YiWmjcB0jmSM8XKsFi/mUlJcI57LTSgprhHP5Sa0
-        FeeMWWo8p8WLuXiJpedC6IvJxUd7juTGGHLshCEnG3LshCEnG3LshJA4djtp+/DGoveDmZiYyDKb/QXy
-        cmrWJiOSUwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EAAACxABrSO9dQAAAvBJREFUaEPtlTvPD0EUh//uEY0oJEIkSFCIuNQ0EvEVNKIgUUtQaBQ0CuLWaEgU
+        eAuVgtal8QE0IkqhFCJB8Hv++05yzJzZ3XmTNVvskzzJ7Jlz5rK3mfXgvFzdNF1Oys1N0+WwPNQ0XTbJ
+        E03TZZU82zSXzkb5TZ6aX6WskO/ktfmVz3P5rGm6XJfv5cr5Vcpp+V2y4WKOy6vytfwjP8rb8pxcL4/K
+        K/KppJ/N3pUX5TZ5QF6SDyT9SJsYfeSQSw219DMWYzI2czAXczI3/ayFNbG23uyQ3OmwCPwlz0jYIF9J
+        24835HK5Rj5cjFmfyLVymWRTcf8byVsAvLI/pO3/IHfLIvZIO8hlaVkneeShn0Va2NBbGfppE7NQE/oZ
+        izEtzBn6kTUVc0xSzAJ+yvvSslXSz/v9VXI3LSz6i/y0KO14I9RQyxiMxZgW5mTucENYUzE8Wv4mvAZ7
+        5U1pOSIvSP5oW+Q9aT/Y7ZIPmfcdaRMLkEsNtYzBWIxpYU7mZg2shTUVc1AuyM+Su1FT1vBY7pdFsHMe
+        qTdoTfn4286cf+BJsInf8pbcKeN3+3/C3Lskv2LWxGb2yU54ndg9mxgbdyRrezS/6iB8EzyJQDgYPV/K
+        mKHyOUOI8RfshMdHsn2d7MCeMV6ONcbLsQZYE9essZO4GLwY1IjnchNKimvEc7kJbcU5Y7wca4yXY7V4
+        MRcvkQ8uxGNfyJgh80O8k96JlZg2AmM5RyDEO/ESQyxnjJdjjfFyrBYv5lJSXCOey00oKa4Rz+UmtBXn
+        jPFyrDFejtXixVy8xCHPBSjJD/FOeidWYtoITOdIxhgvx2rxYi4lxTXiudyEkuIa8VxuQltxzhgvxxrj
+        5VgtXszFSxzyXICS/BDvpHdiJaaNwHSOZIzxcqwWL+ZSUlwjnstNKCmuEc/lJrQV54xZajynxYu5eIml
+        50Loi8nFR3uO5MYYcuyEIScbcuyEIScbcuyEkDh2O2n78Mai94OZmJjIMpv9BfJyatYmI5JTAAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADwAAAA8CAYAAAA6/NlyAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAIqSURBVGhD7dpNS1VRFMbxK4E4NhRKjT6EjRwUNgpUnErz
-        yJdyGBE08BsUDSzFgUMH4qRs0KyXr2CWNksbKb1AUUn+H7iCyNLOvXsf7zq1HvjB5erdZx3P9ux1ttYi
-        kUgkEqldwC08x1t8q9NrvTeFPlQ+PXiM3/jzF3tYwkVUMqP4CuvkTvIFI6hUpqErZp1QEfrsbVQiurIp
-        J3tAY7i/0r1oZhofR9P7PNxmAVbhKebgMlp6ityNG6UxNXPcRTcZq+AcJuEuq7CKzeEp3OU9rGJzUEfm
-        LjnvzkdpbHexCs3JXawic3KXMqf0Z7jLOqxic1iDu/x3y5Ie4q1icxiHu2jHoozW8hdctpbKPKyiU8zC
-        bbSlo0c6q/Bm6O58Dq5zDTmmtjYAhlGJ6MkpdYtHu5yVirZnmpnemsZDqGS68AC601ond5iu6iLc/84W
-        iZYVPcQ/g7omtaGi12oqJuB26YlEIpHIv5AzuIQbeIgX0O7jJ3yv266/p69pvdb39kOfrUS6oTV1Bbuw
-        GowidrCMm1Dz4irtuA7teBTpqBqlMdWwjEHHalnO4h62YBVaho+4i06cWvRT1h+8U6ZsKh37DjpQai7j
-        A6wiWmEDA8ieNsygjD2rVKrpPlRjlmigR7AO5skTZDlp7TxYB/BIW8XJ2YQ1uEfvkBx1RNbgHum/+5Lz
-        BtbgHr1EcgZRRgeV209o2cySq3iNH7AO1kqq6RWuIBKJRCKRiNvUavuRsNRhX1cj9gAAAABJRU5ErkJg
-        gg==
+        iVBORw0KGgoAAAANSUhEUgAAADwAAAA8CAYAAAA6/NlyAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EAAACxABrSO9dQAAAipJREFUaEPt2k1LVVEUxvErgTg2FEqNPoSNHBQ2ClScSvPIl3IYETTwGxQNLMWB
+        QwfipGzQrJevYJY2SxspvUBRSf4fuILI0s69ex/vOrUe+MHl6t1nHc/27HW21iKRSCQSqV3ALTzHW3yr
+        02u9N4U+VD49eIzf+PMXe1jCRVQyo/gK6+RO8gUjqFSmoStmnVAR+uxtVCK6sikne0BjuL/SvWhmGh9H
+        0/s83GYBVuEp5uAyWnqK3I0bpTE1c9xFNxmr4Bwm4S6rsIrN4Snc5T2sYnNQR+YuOe/OR2lsd7EKzcld
+        rCJzcpcyp/RnuMs6rGJzWIO7/HfLkh7irWJzGIe7aMeijNbyF1y2lso8rKJTzMJttKWjRzqr8Gbo7nwO
+        rnMNOaa2NgCGUYnoySl1i0e7nJWKtmeamd6axkOoZLrwALrTWid3mK7qItz/zhaJlhU9xD+Duia1oaLX
+        aiom4HbpiUQikci/kDO4hBt4iBfQ7uMnfK/brr+nr2m91vf2Q5+tRLqhNXUFu7AajCJ2sIybUPPiKu24
+        Du14FOmoGqUx1bCMQcdqWc7iHrZgFVqGj7iLTpxa9FPWH7xTpmwqHfsOOlBqLuMDrCJaYQMDyJ42zKCM
+        PatUquk+VGOWaKBHsA7myRNkOWntPFgH8EhbxcnZhDW4R++QHHVE1uAe6b/7kvMG1uAevURyBlFGB5Xb
+        T2jZzJKreI0fsA7WSqrpFa4gEolEIpGI29Rq+5Gw1GFfVyP2AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAJHSURBVHhe7ZjLShxBFIYn2ZiHyjIoWYaQrENC1iLZS5aJ
-        5rLM5SF8q6gPICqa219owfBRnK4zXd1d3VMffCDD8Z/zH2WYmVWj0WhMyHv54e7H7SOU/3fv1h1hvfzW
-        HSFVPrr4I1jlo4s9Qk756OKO4CkfXcwRNikfnf0RPOVP5AUeC4aMWeIp/1M+lI9l6giz+0/wln8gI0/k
-        peTcbI7gKf9DrpeP7Moryfnqj+Ap/12mykf25LXk71V7BE/5b9IqH3kqZ3EET/mvMqd85Jm8kcyp5gje
-        8pvwXN5K5k1+BE/5L7IPL2RVR/CU/yxL8FL+lswf/QhTlI+8kn8kn2e0I3jKf5JD8FpOcgRP+WM5JG/k
-        X8nnHewINZWPvJWjHMFT/kiOyb5M7VHsCJ7yH+UUHMjUPkWOkApOOVX5yDuZ2qs3qVA6+KtvJoeSu/WG
-        gbSW8hHu1xsG0toovh8DaW0U34+BtDaK78dAWhvF92MgtXgkw3cAZ/JUho/E4bEh8eyXBQOpRSjP+dSn
-        Q850aeGZzYKB1CL85Tl/LglnurTwzGbBQGqROsAvSTjTpYVnNgsGUovw78751CdFznRp4ZnNgoHUIrzg
-        hSOEF8Bg+IJkRw6JZ78sGEhro/h+DKS1UXw/BlKL9j5Acr69D5CEM11aeGazYCC1aO8DJOfb+wA5JJ79
-        smAgrY3i+zGQ1kbx/RhIa6P4fgykFqn5Elp4ZrNgILVIzZfQwjObBQOpRWq+hBae2SwYSC1S8yW08Mw2
-        Go1Go9HYWlar//e8kYarggG1AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EAAACxABrSO9dQAAAkdJREFUeF7tmMtKHEEUhifZmIfKMihZhpCsQ0LWItlLlonmsszlIXyrqA8gKprb
+        X2jB8FGcrjNd3V3dUx98IMPxn/MfZZiZVaPRaEzIe/nh7sftI5T/d+/WHWG9/NYdIVU+uvgjWOWjiz1C
+        Tvno4o7gKR9dzBE2KR+d/RE85U/kBR4LhoxZ4in/Uz6Uj2XqCLP7T/CWfyAjT+Sl5NxsjuAp/0Oul4/s
+        yivJ+eqP4Cn/XabKR/bkteTvVXsET/lv0iofeSpncQRP+a8yp3zkmbyRzKnmCN7ym/Bc3krmTX4ET/kv
+        sg8vZFVH8JT/LEvwUv6WzB/9CFOUj7ySfySfZ7QjeMp/kkPwWk5yBE/5Yzkkb+Rfyecd7Ag1lY+8laMc
+        wVP+SI7JvkztUewInvIf5RQcyNQ+RY6QCk45VfnIO5naqzepUDr4q28mh5K79YaBtJbyEe7XGwbS2ii+
+        HwNpbRTfj4G0Norvx0BaG8X3YyC1eCTDdwBn8lSGj8ThsSHx7JcFA6lFKM/51KdDznRp4ZnNgoHUIvzl
+        OX8uCWe6tPDMZsFAapE6wC9JONOlhWc2CwZSi/DvzvnUJ0XOdGnhmc2CgdQivOCFI4QXwGD4gmRHDoln
+        vywYSGuj+H4MpLVRfD8GUov2PkByvr0PkIQzXVp4ZrNgILVo7wMk59v7ADkknv2yYCCtjeL7MZDWRvH9
+        GEhro/h+DKQWqfkSWnhms2AgtUjNl9DCM5sFA6lFar6EFp7ZLBhILVLzJbTwzDYajUaj0dhaVqv/97yR
+        hquCAbUAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EAAACxABrSO9dQAAAnZJREFUaEPt2smK1UAYxfG7clgoCtq60+dQl6IINu3S4RlE6bdwWCgK4tZHcO43
+        EHHtvHLYSOvaCfV/wAIxJ7lJfclNdegDP2i6UpXcrqRuVaVnm5lwduMUruABXuILvv2ln19AZTpmBbtQ
+        RLbiHNbwE787Up1HOAu1tfBsxyo+wl1gjg+4iG1YSE7gLdzF9OENjmOwqOuvw518CHegnu81+/AM7oRD
+        eool9JKDUHe7Ey3Ca+gaQtkLDaPuBIukZ3I/sqLRY4zbqY5us6wh+hZcg2O6gU7REOsaKsExtIq67xVc
+        IyXQwNPqS1Pf2K6BklxAY9Qbmiq4yiV5j8YHXxNAV7FEZ1AbzWJdpYhDOPzf7/rwEDZaT+RMxedJcWUR
+        P7ATlWhR5CpEpbiyqJOo5CrcwVEprizqMirREtQdHJXiyqLuohLNMt3BUSmuLEoT2ko+wx0cleLKoj6h
+        Eu10uIPb0BCbm8jQ/BWVRD6ILiY3R+DabMN+kMncWkPNeFNcWZQ2/CqZzPCrbUx3cFSKK4u6hEomM0XR
+        hvJGmjR+h500Ko/hKkVoaI4MsXXuozbaFXeVSnQatdlIS90taIy29l3lkpzH3KhXStgmraNZeuPGw7/R
+        +wnXyNh+4Sg65SZcY2O6hs5R92nj2DU4hieY+4DXZQ9Kea2gl02h6CXLUMvgNjQrP4BeotdfY9xmup30
+        sqnX6JnRy1CNHO6kfbuN1sNsTvR+YshbTc9k5yE2N/pLaWtfUwV3MTneQd/Yg/ZCXXRS7Yprdam9WHeB
+        TVRHs1hNALOH1r6jtcEytI15D1pPryP9U41+fg4tT7Wy06JoBzYzwcxmfwABGDqo18PS/gAAAABJRU5E
+        rkJggg==
 </value>
   </data>
   <data name="pictureBox8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADwAAAA8CAYAAAA6/NlyAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAAXRJREFUaEPtmcFqwzAQRPOJPbT00H59+xkttBrIQDBOK61Gq12yDwZycDJ+KJJs
+        DgAACw4BQL7hQQAAAXRJREFUaEPtmcFqwzAQRPOJPbT00H59+xkttBrIQDBOK61Gq12yDwZycDJ+KJJs
         dCmKoiiKIhVPLZ/X4LM3rv0vLV8tP9d8t7y3eOHafyxzKb3Btf9eGbNa2rUf8+SvMgbXvLaowW/29kvm
         NBaHs4KzqKV7ZRnc6zQjwohKelQW+WiZpvcvfZtZaYssrpdtU88tozdgXUj+W6DOgq63Fike0mFkyUrp
         cLJkhXRYWaKUDi9LFNJpZMmMdDpZYt0zLd9RPNBIsIz0SEKM7JFV0iFliVo6tCxRSaeQJbPSqWSJVTql
         LLDsswiEe569Q2GVZVJJz8oyKaRVskxoabUsE1J6lSwTSvqhXh4sI4vRwj5r2ae3jvSMLEkjrZAl4aWV
         siSs9ApZEk56pSwJI+0hS7ZLP9xhWqbjUvfzYZUsGZV2PR9Wy5JeaVzjdj5sXaB62dJ/r3S1LNnSfyz1
         kiVb+jFPsJBhgZDNmQF29xdFURRFYeJy+QX+krx20s9ccwAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="pictureBox9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAJ2SURBVGhD7drJitVAGMXxu3JYKArautPnUJeiCDbt0uEZ
-        ROm3cFgoCuLWR3DuNxBx7bxy2Ejr2gn1f8ACMSe5SX3JTXXoAz9oulKV3K6kblWlZ5uZcHbjFK7gAV7i
-        C779pZ9fQGU6ZgW7UES24hzW8BO/O1KdRzgLtbXwbMcqPsJdYI4PuIhtWEhO4C3cxfThDY5jsKjrr8Od
-        fAh3oJ7vNfvwDO6EQ3qKJfSSg1B3uxMtwmvoGkLZCw2j7gSLpGdyP7Ki0WOM26mObrOsIfoWXINjuoFO
-        0RDrGirBMbSKuu8VXCMl0MDT6ktT39iugZJcQGPUG5oquMoleY/GB18TQFexRGdQG81iXaWIQzj83+/6
-        8BA2Wk/kTMXnSXFlET+wE5VoUeQqRKW4sqiTqOQq3MFRKa4s6jIq0RLUHRyV4sqi7qISzTLdwVEprixK
-        E9pKPsMdHJXiyqI+oRLtdLiD29AQm5vI0PwVlUQ+iC4mN0fg2mzDfpDJ3FpDzXhTXFmUNvwqmczwq21M
-        d3BUiiuLuoRKJjNF0YbyRpo0foedNCqP4SpFaGiODLF17qM22hV3lUp0GrXZSEvdLWiMtvZd5ZKcx9yo
-        V0rYJq2jWXrjxsO/0fsJ18jYfuEoOuUmXGNjuobOUfdp49g1OIYnmPuA12UPSnmtoJdNoegly1DL4DY0
-        Kz+AXqLXX2PcZrqd9LKp1+iZ0ctQjRzupH27jdbDbE70fmLIW03PZOchNjf6S2lrX1MFdzE53kHf2IP2
-        Ql10Uu2Ka3WpvVh3gU1UR7NYTQCzh9a+o7XBMrSNeQ9aT68j/VONfn4OLU+1stOiaAc2M8HMZn8AARg6
-        qNfD0v4AAAAASUVORK5CYII=
 </value>
   </data>
 </root>
