--- a/HostelMS/Rooms.resx
+++ b/HostelMS/Rooms.resx
@@ -118,27 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBox9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAAnZJREFUaEPt2smK1UAYxfG7clgoCtq60+dQl6IINu3S4RlE6bdwWCgK4tZHcO43
-        EHHtvHLYSOvaCfV/wAIxJ7lJfclNdegDP2i6UpXcrqRuVaVnm5lwduMUruABXuILvv2ln19AZTpmBbtQ
-        RLbiHNbwE787Up1HOAu1tfBsxyo+wl1gjg+4iG1YSE7gLdzF9OENjmOwqOuvw518CHegnu81+/AM7oRD
-        eool9JKDUHe7Ey3Ca+gaQtkLDaPuBIukZ3I/sqLRY4zbqY5us6wh+hZcg2O6gU7REOsaKsExtIq67xVc
-        IyXQwNPqS1Pf2K6BklxAY9Qbmiq4yiV5j8YHXxNAV7FEZ1AbzWJdpYhDOPzf7/rwEDZaT+RMxedJcWUR
-        P7ATlWhR5CpEpbiyqJOo5CrcwVEprizqMirREtQdHJXiyqLuohLNMt3BUSmuLEoT2ko+wx0cleLKoj6h
-        Eu10uIPb0BCbm8jQ/BWVRD6ILiY3R+DabMN+kMncWkPNeFNcWZQ2/CqZzPCrbUx3cFSKK4u6hEomM0XR
-        hvJGmjR+h500Ko/hKkVoaI4MsXXuozbaFXeVSnQatdlIS90taIy29l3lkpzH3KhXStgmraNZeuPGw7/R
-        +wnXyNh+4Sg65SZcY2O6hs5R92nj2DU4hieY+4DXZQ9Kea2gl02h6CXLUMvgNjQrP4BeotdfY9xmup30
-        sqnX6JnRy1CNHO6kfbuN1sNsTvR+YshbTc9k5yE2N/pLaWtfUwV3MTneQd/Yg/ZCXXRS7Yprdam9WHeB
-        TVRHs1hNALOH1r6jtcEytI15D1pPryP9U41+fg4tT7Wy06JoBzYzwcxmfwABGDqo18PS/gAAAABJRU5E
-        rkJggg==
-</value>
-  </data>
   <data name="pictureBox8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADwAAAA8CAYAAAA6/NlyAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAAAXRJREFUaEPtmcFqwzAQRPOJPbT00H59+xkttBrIQDBOK61Gq12yDwZycDJ+KJJs
+        DAAACwwBP0AiyAAAAXRJREFUaEPtmcFqwzAQRPOJPbT00H59+xkttBrIQDBOK61Gq12yDwZycDJ+KJJs
         dCmKoiiKIhVPLZ/X4LM3rv0vLV8tP9d8t7y3eOHafyxzKb3Btf9eGbNa2rUf8+SvMgbXvLaowW/29kvm
         NBaHs4KzqKV7ZRnc6zQjwohKelQW+WiZpvcvfZtZaYssrpdtU88tozdgXUj+W6DOgq63Fike0mFkyUrp
         cLJkhXRYWaKUDi9LFNJpZMmMdDpZYt0zLd9RPNBIsIz0SEKM7JFV0iFliVo6tCxRSaeQJbPSqWSJVTql
@@ -150,7 +133,7 @@
   <data name="pictureBox7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAAMtJREFUaEPtmDEOwjAQBP0N4J9A3gc8igr2XLhhEkp7pR1pmolOuiRy4xZCCCEE
+        DAAACwwBP0AiyAAAAMtJREFUaEPtmDEOwjAQBP0N4J9A3gc8igr2XLhhEkp7pR1pmolOuiRy4xZCCCEE
         5iU/i/uUh1wkDa7oWe6ySRpa0bv8of5EvcRb0tCK1q71MuPPOJyJf/YzQw8cxegoRkcxOorRUYyOYiRn
         QbuQGMlZ0C4kRkcxOorRUYyOYnQUo6MYyVnQLiRGcha0C4nRUYyOYnQUo6MYHcXoaL9KoQdOPmSnLrlu
         0u2C7irx6rRu7mhoRevD73KSNLSiteshDmdmnIkQQgghDFr7AlgCiV46in+QAAAAAElFTkSuQmCC
@@ -159,7 +142,7 @@
   <data name="pictureBox6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAAmtJREFUeF7t2rmKVEEUxvFWTNRI0czADfclEMXEWB/DeQJRTEQRMXZJ9CXMXF5E
+        DAAACwwBP0AiyAAAAmtJREFUeF7t2rmKVEEUxvFWTNRI0czADfclEMXEWB/DeQJRTEQRMXZJ9CXMXF5E
         cA3MFNyScUENXP6fUlgUp1umb90+JXU++IFCc+65h5nqqjt3EolEIpFIJBKpm/XYhyOVqNY6NJ/jeICv
         +FmZat7HMTSZy/gBq/madI1LaCrnYTU7prNoItvwDVaTY9I1d8A9N2E1uAjX4Z6nsJpbhMdwz2dYzcl7
         vBhINazaomu7x2os0fowNNth1U7cYzWVbMHQqIZVO3GP1VQSA8DQrMEGrMZuXEW+7rgnv+FSjQFY2YP0
@@ -175,7 +158,7 @@
   <data name="pictureBox5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAAohJREFUaEPt2s2LTQEYx/HxmuQlJUlJWbAksVAsyFbZ2FhYWNha2lpY2FrK0kYW
+        DAAACwwBP0AiyAAAAohJREFUaEPt2s2LTQEYx/HxmuQlJUlJWbAksVAsyFbZ2FhYWNha2lpY2FrK0kYW
         YmGjLJCFofwBFAolC5G3vP8e3d90Hd97n3ufuXfuGc23PjVzn3nOOVMzc2fOnamFBmu7POyIt+dlh+Wt
         /Op4L0dl3rREzsgP8SdhP+W8LJNWt15uSvMTaLotG6WV7ZKnQhdOXsheaVXH5ZPQBffzRU7JxFshF4Uu
         chiXZKVMpM1yX+jCKh7JVpnTDshroQuajXdyRMbeIjkt9KN1VOJH9DlZLGNpjVwVOvk43JB1MtJ2yBOh
@@ -192,7 +175,7 @@
   <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DwAACw8BkvkDpQAAAkdJREFUeF7tmMtKHEEUhifZmIfKMihZhpCsQ0LWItlLlonmsszlIXyrqA8gKprb
+        DAAACwwBP0AiyAAAAkdJREFUeF7tmMtKHEEUhifZmIfKMihZhpCsQ0LWItlLlonmsszlIXyrqA8gKprb
         X2jB8FGcrjNd3V3dUx98IMPxn/MfZZiZVaPRaEzIe/nh7sftI5T/d+/WHWG9/NYdIVU+uvgjWOWjiz1C
         Tvno4o7gKR9dzBE2KR+d/RE85U/kBR4LhoxZ4in/Uz6Uj2XqCLP7T/CWfyAjT+Sl5NxsjuAp/0Oul4/s
         yivJ+eqP4Cn/XabKR/bkteTvVXsET/lv0iofeSpncQRP+a8yp3zkmbyRzKnmCN7ym/Bc3krmTX4ET/kv
@@ -208,7 +191,7 @@
   <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAAvBJREFUaEPtlTvPD0EUh//uEY0oJEIkSFCIuNQ0EvEVNKIgUUtQaBQ0CuLWaEgU
+        DAAACwwBP0AiyAAAAvBJREFUaEPtlTvPD0EUh//uEY0oJEIkSFCIuNQ0EvEVNKIgUUtQaBQ0CuLWaEgU
         eAuVgtal8QE0IkqhFCJB8Hv++05yzJzZ3XmTNVvskzzJ7Jlz5rK3mfXgvFzdNF1Oys1N0+WwPNQ0XTbJ
         E03TZZU82zSXzkb5TZ6aX6WskO/ktfmVz3P5rGm6XJfv5cr5Vcpp+V2y4WKOy6vytfwjP8rb8pxcL4/K
         K/KppJ/N3pUX5TZ5QF6SDyT9SJsYfeSQSw219DMWYzI2czAXczI3/ayFNbG23uyQ3OmwCPwlz0jYIF9J
@@ -227,7 +210,7 @@
   <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADwAAAA8CAYAAAA6/NlyAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAAipJREFUaEPt2k1LVVEUxvErgTg2FEqNPoSNHBQ2ClScSvPIl3IYETTwGxQNLMWB
+        DAAACwwBP0AiyAAAAipJREFUaEPt2k1LVVEUxvErgTg2FEqNPoSNHBQ2ClScSvPIl3IYETTwGxQNLMWB
         QwfipGzQrJevYJY2SxspvUBRSf4fuILI0s69ex/vOrUe+MHl6t1nHc/27HW21iKRSCQSqV3ALTzHW3yr
         02u9N4U+VD49eIzf+PMXe1jCRVQyo/gK6+RO8gUjqFSmoStmnVAR+uxtVCK6sikne0BjuL/SvWhmGh9H
         0/s83GYBVuEp5uAyWnqK3I0bpTE1c9xFNxmr4Bwm4S6rsIrN4Snc5T2sYnNQR+YuOe/OR2lsd7EKzcld
@@ -242,7 +225,7 @@
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAAkdJREFUeF7tmMtKHEEUhifZmIfKMihZhpCsQ0LWItlLlonmsszlIXyrqA8gKprb
+        DAAACwwBP0AiyAAAAkdJREFUeF7tmMtKHEEUhifZmIfKMihZhpCsQ0LWItlLlonmsszlIXyrqA8gKprb
         X2jB8FGcrjNd3V3dUx98IMPxn/MfZZiZVaPRaEzIe/nh7sftI5T/d+/WHWG9/NYdIVU+uvgjWOWjiz1C
         Tvno4o7gKR9dzBE2KR+d/RE85U/kBR4LhoxZ4in/Uz6Uj2XqCLP7T/CWfyAjT+Sl5NxsjuAp/0Oul4/s
         yivJ+eqP4Cn/XabKR/bkteTvVXsET/lv0iofeSpncQRP+a8yp3zkmbyRzKnmCN7ym/Bc3krmTX4ET/kv
@@ -253,6 +236,35 @@
         vywYSGuj+H4MpLVRfD8GUov2PkByvr0PkIQzXVp4ZrNgILVo7wMk59v7ADkknv2yYCCtjeL7MZDWRvH9
         GEhro/h+DKQWqfkSWnhms2AgtUjNl9DCM5sFA6lFar6EFp7ZLBhILVLzJbTwzDYajUaj0dhaVqv/97yR
         hquCAbUAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="AddRoom.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAnZJREFUaEPt2smK1UAYxfG7clgoCtq60+dQl6IINu3S4RlE6bdwWCgK4tZHcO43
+        EHHtvHLYSOvaCfV/wAIxJ7lJfclNdegDP2i6UpXcrqRuVaVnm5lwduMUruABXuILvv2ln19AZTpmBbtQ
+        RLbiHNbwE787Up1HOAu1tfBsxyo+wl1gjg+4iG1YSE7gLdzF9OENjmOwqOuvw518CHegnu81+/AM7oRD
+        eool9JKDUHe7Ey3Ca+gaQtkLDaPuBIukZ3I/sqLRY4zbqY5us6wh+hZcg2O6gU7REOsaKsExtIq67xVc
+        IyXQwNPqS1Pf2K6BklxAY9Qbmiq4yiV5j8YHXxNAV7FEZ1AbzWJdpYhDOPzf7/rwEDZaT+RMxedJcWUR
+        P7ATlWhR5CpEpbiyqJOo5CrcwVEprizqMirREtQdHJXiyqLuohLNMt3BUSmuLEoT2ko+wx0cleLKoj6h
+        Eu10uIPb0BCbm8jQ/BWVRD6ILiY3R+DabMN+kMncWkPNeFNcWZQ2/CqZzPCrbUx3cFSKK4u6hEomM0XR
+        hvJGmjR+h500Ko/hKkVoaI4MsXXuozbaFXeVSnQatdlIS90taIy29l3lkpzH3KhXStgmraNZeuPGw7/R
+        +wnXyNh+4Sg65SZcY2O6hs5R92nj2DU4hieY+4DXZQ9Kea2gl02h6CXLUMvgNjQrP4BeotdfY9xmup30
+        sqnX6JnRy1CNHO6kfbuN1sNsTvR+YshbTc9k5yE2N/pLaWtfUwV3MTneQd/Yg/ZCXXRS7Yprdam9WHeB
+        TVRHs1hNALOH1r6jtcEytI15D1pPryP9U41+fg4tT7Wy06JoBzYzwcxmfwABGDqo18PS/gAAAABJRU5E
+        rkJggg==
+</value>
+  </data>
+  <data name="Closebtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADwAAAA8CAYAAAA6/NlyAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAXRJREFUaEPtmcFqwzAQRPOJPbT00H59+xkttBrIQDBOK61Gq12yDwZycDJ+KJJs
+        dCmKoiiKIhVPLZ/X4LM3rv0vLV8tP9d8t7y3eOHafyxzKb3Btf9eGbNa2rUf8+SvMgbXvLaowW/29kvm
+        NBaHs4KzqKV7ZRnc6zQjwohKelQW+WiZpvcvfZtZaYssrpdtU88tozdgXUj+W6DOgq63Fike0mFkyUrp
+        cLJkhXRYWaKUDi9LFNJpZMmMdDpZYt0zLd9RPNBIsIz0SEKM7JFV0iFliVo6tCxRSaeQJbPSqWSJVTql
+        LLDsswiEe569Q2GVZVJJz8oyKaRVskxoabUsE1J6lSwTSvqhXh4sI4vRwj5r2ae3jvSMLEkjrZAl4aWV
+        siSs9ApZEk56pSwJI+0hS7ZLP9xhWqbjUvfzYZUsGZV2PR9Wy5JeaVzjdj5sXaB62dJ/r3S1LNnSfyz1
+        kiVb+jFPsJBhgZDNmQF29xdFURRFYeJy+QX+krx20s9ccwAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
