fixed cost times month

--- a/HostelMS/Owners.resx
+++ b/HostelMS/Owners.resx
@@ -246,4 +246,19 @@
         kiVb+jFPsJBhgZDNmQF29xdFURRFYeJy+QX+krx20s9ccwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="pictureBox7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADwAAAA8CAYAAAA6/NlyAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAipJREFUaEPt2k1LVVEUxvErgTg2FEqNPoSNHBQ2ClScSvPIl3IYETTwGxQNLMWB
+        QwfipGzQrJevYJY2SxspvUBRSf4fuILI0s69ex/vOrUe+MHl6t1nHc/27HW21iKRSCQSqV3ALTzHW3yr
+        02u9N4U+VD49eIzf+PMXe1jCRVQyo/gK6+RO8gUjqFSmoStmnVAR+uxtVCK6sikne0BjuL/SvWhmGh9H
+        0/s83GYBVuEp5uAyWnqK3I0bpTE1c9xFNxmr4Bwm4S6rsIrN4Snc5T2sYnNQR+YuOe/OR2lsd7EKzcld
+        rCJzcpcyp/RnuMs6rGJzWIO7/HfLkh7irWJzGIe7aMeijNbyF1y2lso8rKJTzMJttKWjRzqr8Gbo7nwO
+        rnMNOaa2NgCGUYnoySl1i0e7nJWKtmeamd6axkOoZLrwALrTWid3mK7qItz/zhaJlhU9xD+Duia1oaLX
+        aiom4HbpiUQikci/kDO4hBt4iBfQ7uMnfK/brr+nr2m91vf2Q5+tRLqhNXUFu7AajCJ2sIybUPPiKu24
+        Du14FOmoGqUx1bCMQcdqWc7iHrZgFVqGj7iLTpxa9FPWH7xTpmwqHfsOOlBqLuMDrCJaYQMDyJ42zKCM
+        PatUquk+VGOWaKBHsA7myRNkOWntPFgH8EhbxcnZhDW4R++QHHVE1uAe6b/7kvMG1uAevURyBlFGB5Xb
+        T2jZzJKreI0fsA7WSqrpFa4gEolEIpGI29Rq+5Gw1GFfVyP2AAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
